# sports-comparison

./: .gitignore  LICENSE  Makefile  README.md  data.csv  data.fods  head.thtml  pyproject.toml  sports.py
.github/workflows/: deploy.yml
tests/: test_text_extraction.py  test_text_removal.py
