[tool.poetry]
name = "sports"
version = "0.1.0"
description = ""
authors = ["Adrian Edwards <adrian@adriancedwards.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
